--- a/szcpvue/public/index.html
+++ b/szcpvue/public/index.html
@@ -8,9 +8,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta name="keywords"
-    content="blog996,blog996全栈,九九六全栈,九九六博客,全栈博客,前端教程,前端技术,互联网,IT,HTML,CSS,PHP,JavaScript,jQuery,XML,AJAX,ASP.NET,MySQL,SQL,bootstrap,Python,vue,react">
+    content="Valve公司实习招聘系统">
   <meta name="description"
-    content="blog996全栈九九六博客要做好个人开发学习网站,开发者知识分享平台,包括了HTML,CSS,Javascript,Python,Java,PHP,Android,MySQL等各种编程语言的基础知识学习,同时本站中也提供了大量的在线教程和文章菜单,通过搜索标签,您可以很快找到感兴趣的文章">
+    content="Valve公司实习招聘系统">
 
   <link rel="icon" href="<%= BASE_URL %>favicon.png">
   <title></title>
